centered and changed the colors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>Stefan Trajkovski</title>
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -51,36 +51,36 @@
             <div class="absolute top-32 left-8 z-10">
                 <div class="max-w-lg">
                     <h2 class="text-4xl font-bubblegum mb-2">Hi! I Am</h2>
-                    <h1 class="text-4xl font-bold text-amber-400 mb-4 font-poppins">Stefan Trajkovski</h1>
+                    <h1 class="text-4xl font-bold text-[#EDB33C] mb-4 font-poppins">Stefan Trajkovski</h1>
                 </div>
             </div>
 
             <!-- Experience and social links -->
             <div class="absolute top-[500px] left-8 z-10">
                 <div class="max-w-lg">
-                    <div class="mb-12 font-poppins flex gap-4">
+                    <div class="mb-12 font-poppins ml-[30px] flex gap-4">
                         <div class="text-4xl font-bold text-teal-700 pt-2">01</div>
                         <div class="text-gray-600 text-lg">YEARS<br/>EXPERIENCE</div>
                     </div>
 
                     <div class="flex space-x-6 mt-[70px]">
                         <a href="#" class="text-gray-600 hover:text-amber-400">
-                            <div class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center">
+                            <div class="w-10 h-10 rounded-full flex items-center justify-center">
                                 <img src="assets/svg/social/facebook.svg" alt="Facebook" class="w-6 h-6">
                             </div>
                         </a>
                         <a href="#" class="text-gray-600 hover:text-amber-400">
-                            <div class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center">
+                            <div class="w-10 h-10 rounded-full flex items-center justify-center">
                                 <img src="assets/svg/social/instagram.svg" alt="Instagram" class="w-6 h-6">
                             </div>
                         </a>
                         <a href="#" class="text-gray-600 hover:text-amber-400">
-                            <div class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center">
+                            <div class="w-10 h-10 rounded-full flex items-center justify-center">
                                 <img src="assets/svg/social/twitter.svg" alt="Twitter" class="w-6 h-6">
                             </div>
                         </a>
                         <a href="#" class="text-gray-600 hover:text-amber-400">
-                            <div class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center">
+                            <div class="w-10 h-10 rounded-full flex items-center justify-center">
                                 <img src="assets/svg/social/linkedin.svg" alt="LinkedIn" class="w-6 h-6">
                             </div>
                         </a>
@@ -100,7 +100,7 @@
                     </div>
                     
                     <!-- Reviews Box -->
-                    <div class="absolute top-[120px] right-[-340px] bg-white p-4 rounded-lg shadow-lg">
+                    <div class="absolute top-[120px] right-[-390px] bg-white p-4 rounded-lg shadow-lg">
                         <div class="flex items-center gap-2">
                             <p class="text-base font-medium text-left text-[#0d2f3f]">12k Reviews On</p>
                             <div class="flex text-yellow-400 text-2xl">
