--- a/index.html
+++ b/index.html
@@ -27,15 +27,31 @@
 </head>
 <body class="bg-[#F8F7F1] overflow-y-hidden">
     <!-- Navbar -->
-    <nav class="fixed w-full bg-white shadow-sm z-50">
+    <nav class="fixed w-full bg-[#FAFAD] shadow-sm z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="text-2xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
-                <div class="hidden md:flex space-x-16 font-poppins">
-                    <a href="#" class="text-gray-700 hover:duration-[0.3s] hover:text-teal-600">Home</a>
-                    <a href="#services" class="text-gray-700 hover:duration-[0.3s] hover:text-teal-600">Services</a>
-                    <a href="#projects" class="text-gray-700 hover:duration-[0.3s] hover:text-teal-600">Projects</a>
-                    <a href="#" class="text-gray-700 hover:duration-[0.3s] hover:text-teal-600">Contact</a>
+                <div class="hidden md:flex space-x-20 font-poppins">
+                    <a href="#" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                        Home
+                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                    </a>
+                    <a href="#services" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                        Services
+                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                    </a>
+                    <a href="#projects" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                        Projects
+                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                    </a>
+                    <a href="#" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                        Contact
+                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                    </a>
                 </div>
                 <button class="bg-teal-600 text-white px-6 py-2 rounded-md hover:bg-teal-700 font-poppins">
                     Download CV
