added the main photo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="#" class="text-gray-600 hover:text-gray-900 relative group ">
                         Contact
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
@@ -111,8 +111,8 @@
             <!-- Centered image -->
             <div class="flex justify-center items-center min-h-[calc(100vh-4rem)]">
                 <div class="relative">
-                    <div class="w-[500px] h-[500px] bg-gray-200 rounded-full flex items-center justify-center text-gray-400">
-                        500x500
+                    <div class="w-[500px] h-[500px] rounded-full overflow-hidden">
+                        <img src="assets/images/Стефан Трајковски А23081.jpg" alt="Stefan Trajkovski" class="w-full h-full object-cover">
                     </div>
                     
                     <!-- Reviews Box -->
