added contact and fixed bug for nav bar

--- a/contact.html
+++ b/contact.html
@@ -18,25 +18,24 @@
             <div class="flex justify-between items-center h-16">
                 <div class="text-2xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
                 <div class="hidden md:flex space-x-20 font-poppins">
-                    <a href="Home.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="home.html" class="text-gray-600 relative group text-lg">
                         Home
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="#services" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Services
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="#projects" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="projects.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Projects
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group ">
+                    <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Contacts
-                        <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
-                        <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 left-0 w-full h-0.5 bg-teal-600"></span>
                     </a>
                 </div>
                 <button class="bg-teal-600 text-white px-6 py-2 rounded-md hover:bg-teal-700 font-poppins">
