added CV download

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Stefan Trajkovski</title>
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="tailwind.config.js"></script>
     <style>
         body { font-family: 'Poppins', sans-serif; }
     </style>
@@ -34,7 +35,7 @@
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
                     <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
-                        Contacts
+                        Contact
                         <span class="absolute bottom-0 left-0 w-full h-0.5 bg-teal-600"></span>
                     </a>
                 </div>
