--- a/home.html
+++ b/home.html
@@ -6,18 +6,7 @@
     <title>Stefan Trajkovski</title>
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        'bubblegum': ['"Bubblegum Sans"', 'cursive'],
-                        'poppins': ['Poppins', 'sans-serif'],
-                    },
-                },
-            },
-        }
-    </script>
+    <script src="tailwind.config.js"></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -26,6 +15,7 @@
     <script src="js/main.js" defer></script>
 </head>
 <body class="bg-[#F8F7F1] overflow-y-hidden">
+    
     <!-- Navbar -->
     <nav class="fixed w-full bg-[#FAFAD] shadow-sm z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -47,13 +37,13 @@
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
                     <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
-                        Contacts
+                        Contact
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
                 </div>
-                <button class="bg-teal-600 text-white px-6 py-2 rounded-md hover:bg-teal-700 font-poppins">
-                    Download CV
+                <button class="bg-teal-600 text-white px-6 py-3 rounded-full hover:bg-teal-700 transition duration-300">
+                    <a href="assets/cv/Stefan_Trajkovski_CV.pdf" download class="inline-block w-full h-full">Download CV</a>
                 </button>
             </div>
         </div>
