--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <button class="bg-teal-600 text-white px-6 py-2 rounded-md hover:bg-teal-700 font-poppins">
-                    Download CV
+                    <a href="assets/cv/Stefan_Trajkovski_CV.pdf" download class="inline-block w-full h-full">Download CV</a>
                 </button>
             </div>
         </div>
