--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
                 </div>
-                <button class="bg-teal-600 text-white px-6 py-3 rounded-full hover:bg-teal-700 transition duration-300">
+                <button class="bg-teal-600 text-white px-6 py-2 rounded-md hover:bg-teal-700 font-poppins">
                     <a href="assets/cv/Stefan_Trajkovski_CV.pdf" download class="inline-block w-full h-full">Download CV</a>
                 </button>
             </div>
