--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <body class="bg-[#F8F7F1] overflow-y-hidden">
     
     <!-- Navbar -->
-    <nav class="fixed w-full bg-[#FAFAD] shadow-sm z-50">
+    <nav class="fixed w-full bg-[#F8F7F1] shadow-sm z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="text-2xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
@@ -26,7 +26,7 @@
                         Home
                         <span class="absolute bottom-0 left-0 w-full h-0.5 bg-teal-600"></span>
                     </a>
-                    <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="services.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Services
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="flex space-x-6 mt-[70px]">
-                        <a href="#" class="text-gray-600 hover:text-amber-400">
+                        <a href="https://www.facebook.com/" class="text-gray-600 hover:text-amber-400">
                             <div class="w-10 h-10 rounded-full flex items-center justify-center">
                                 <img src="assets/svg/social/facebook.svg" alt="Facebook" class="w-6 h-6">
                             </div>
