fixed the links to socials and only twitter is not done

--- a/contact.html
+++ b/contact.html
@@ -88,16 +88,16 @@
                     <div class="mt-12">
                         <h3 class="text-lg font-semibold text-gray-800 mb-4">Follow Me</h3>
                         <div class="flex space-x-4">
-                            <a href="#" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
+                            <a href="https://www.facebook.com/stefan.trajkovski.98/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
                                 <img src="assets/svg/social/facebook.svg" alt="Facebook" class="w-6 h-6">
                             </a>
-                            <a href="#" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
+                            <a href="#" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
                                 <img src="assets/svg/social/twitter.svg" alt="Twitter" class="w-6 h-6">
                             </a>
-                            <a href="#" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
+                            <a href="https://www.instagram.com/trajkovski____/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
                                 <img src="assets/svg/social/instagram.svg" alt="Instagram" class="w-6 h-6">
                             </a>
-                            <a href="#" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
+                            <a href="https://www.linkedin.com/in/stefan-trajkovski-a60190341/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
                                 <img src="assets/svg/social/linkedin.svg" alt="LinkedIn" class="w-6 h-6">
                             </a>
                         </div>
