--- a/contact.html
+++ b/contact.html
@@ -107,26 +107,32 @@
                 <!-- Right Column - Contact Form -->
                 <div class="bg-white rounded-2xl shadow-lg p-8">
                     <h2 class="text-3xl font-bold text-gray-800 mb-6">Send Message</h2>
-                    <form class="space-y-6">
+                    <form id="contact-form" class="space-y-6">
                         <div>
                             <label class="block text-gray-700 text-sm font-semibold mb-2" for="name">Your Name</label>
-                            <input type="text" id="name" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="John Doe">
+                            <input type="text" id="name" name="name" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="John Doe" required>
                         </div>
                         <div>
                             <label class="block text-gray-700 text-sm font-semibold mb-2" for="email">Your Email</label>
-                            <input type="email" id="email" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="john@example.com">
+                            <input type="email" id="email" name="email" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="john@example.com" required>
                         </div>
                         <div>
                             <label class="block text-gray-700 text-sm font-semibold mb-2" for="subject">Subject</label>
-                            <input type="text" id="subject" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="Project Inquiry">
+                            <input type="text" id="subject" name="subject" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="Project Inquiry" required>
                         </div>
                         <div>
                             <label class="block text-gray-700 text-sm font-semibold mb-2" for="message">Message</label>
-                            <textarea id="message" rows="4" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300 resize-none" placeholder="Your message here..."></textarea>
+                            <textarea id="message" name="message" rows="4" class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-200 focus:border-teal-500 focus:bg-white focus:outline-none transition-colors duration-300" placeholder="Your message here..." required></textarea>
                         </div>
-                        <button type="submit" class="w-full bg-teal-600 text-white px-6 py-3 rounded-lg hover:bg-teal-700 transition-colors duration-300 font-semibold">
-                            Send Message
-                        </button>
+                        <div>
+                            <button type="submit" class="w-full bg-teal-600 text-white px-6 py-3 rounded-lg hover:bg-teal-700 transition-colors duration-300">Send Message</button>
+                        </div>
+                        <div id="success-message" class="hidden text-green-600 text-center">
+                            Message sent successfully!
+                        </div>
+                        <div id="error-message" class="hidden text-red-600 text-center">
+                            There was an error sending your message. Please try again.
+                        </div>
                     </form>
                 </div>
             </div>
@@ -149,5 +155,13 @@
             </div>
         </div>
     </main>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        (function() {
+            emailjs.init("YsuwyYKmkEZwQJDeK");
+        })();
+    </script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
