--- a/home.html
+++ b/home.html
@@ -72,24 +72,24 @@
 
     <!-- Hero Section -->
     <main class="pt-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-20 relative min-h-screen">
+        <div class="max-w-7xl 2xl:max-w-[1400px] mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-20 relative min-h-screen">
             <!-- Text content -->
-            <div class="md:absolute md:top-32 md:left-8 z-20 text-center md:text-left mt-4 mb-12 md:mt-0 md:mb-0">
+            <div class="md:absolute md:top-32 2xl:top-40 md:left-8 2xl:left-18 z-20 text-center md:text-left mt-4 mb-12 md:mt-0 md:mb-0">
                 <div class="max-w-lg">
-                    <h2 class="text-3xl md:text-4xl font-bubblegum mb-2">Hi! I Am</h2>
-                    <h1 class="text-3xl md:text-4xl font-bold text-[#EDB33C] mb-4 font-poppins">Stefan Trajkovski</h1>
+                    <h2 class="text-3xl md:text-4xl 2xl:text-5xl font-bubblegum mb-2">Hi! I Am</h2>
+                    <h1 class="text-3xl md:text-4xl 2xl:text-5xl font-bold text-[#EDB33C] mb-4 font-poppins">Stefan Trajkovski</h1>
                 </div>
             </div>
 
             <!-- Decorative SVG -->
-            <div class="absolute left-[150px] top-[200px] z-0 hidden md:block">
-                <img src="assets/svg/decorative.svg" alt="Decorative Path" class="w-full max-w-[456px] h-auto">
+            <div class="absolute left-[150px] 2xl:left-[250px] top-[200px] 2xl:top-[250px] z-0 hidden md:block">
+                <img src="assets/svg/decorative.svg" alt="Decorative Path" class="w-full max-w-[456px] 2xl:max-w-[600px] h-auto">
             </div>
 
             <!-- Centered image -->
             <div class="flex justify-center items-center min-h-[calc(100vh-4rem)] -mt-20 md:mt-0 -translate-y-32 md:translate-y-0">
                 <div class="relative">
-                    <div class="w-[320px] h-[320px] md:w-[500px] md:h-[500px] rounded-full overflow-hidden">
+                    <div class="w-[320px] h-[320px] md:w-[500px] md:h-[500px] 2xl:w-[600px] 2xl:h-[600px] rounded-full overflow-hidden">
                         <img src="assets/images/Стефан Трајковски А23081.jpg" alt="Stefan Trajkovski" class="w-full h-full object-cover">
                     </div>
                 </div>
@@ -131,7 +131,7 @@
             <!-- Desktop components (hidden on mobile) -->
             <div class="hidden md:block">
                 <!-- Reviews Box -->
-                <div class="hidden md:block absolute top-[300px] right-[-1px] bg-white p-4 rounded-lg shadow-lg z-20">
+                <div class="hidden md:block absolute top-[300px] 2xl:top-[400px] right-[-1px] 2xl:right-20 bg-white p-4 2xl:p-6 rounded-lg shadow-lg z-20">
                     <div class="flex items-center gap-2">
                         <p class="text-base font-medium text-left text-[#0d2f3f]">12k Reviews On</p>
                         <div class="flex text-yellow-400 text-2xl">
