--- a/qr.html
+++ b/qr.html
@@ -35,7 +35,7 @@
         // Generate QR code when the page loads
         window.onload = function() {
             var qrcode = new QRCode(document.getElementById("qrcode"), {
-                text: "https://stefantrajkovski.netlify.app/", 
+                text: "https://portfolio-website-eosin-rho.vercel.app/index.html", 
                 width: 256,
                 height: 256,
                 colorDark : "#0F766E",
