changed the home page for better responsivness and better ui

--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Stefan Trajkovski</title>
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind.config.js"></script>
-    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -22,7 +21,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
                 <div class="hidden md:flex space-x-20 font-poppins">
-                    <a href="index.html" class="text-gray-600 relative group text-lg">
+                    <a href="index.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Home
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
@@ -32,9 +31,10 @@
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="projects.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="projects.html" class="text-gray-900 relative group text-lg">
                         Projects
-                        <span class="absolute bottom-0 left-0 w-full h-0.5 bg-teal-600"></span>
+                        <span class="absolute bottom-0 left-1/2 w-1/2 h-0.5 bg-teal-600 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-1/2 h-0.5 bg-teal-600 transition-all duration-300 origin-center"></span>
                     </a>
                     <a href="contact.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Contact
